teste/y.output
Terminais sem uso na gramática

    CHAR_TYPE


Gramática

    0 $accept: program $end

    1 program: declaration program
    2        | declaration

    3 declaration: struct
    4            | function
    5            | global_statement
    6            | EOFF

    7 struct: STRUCT ID struct_block

    8 struct_block: '{' attributes '}'

    9 attributes: attribute attributes
   10           | %empty

   11 attribute: type ID ';'

   12 function: type function_id '(' opt_parameters ')' block

   13 opt_parameters: parameters
   14               | %empty

   15 parameters: parameter
   16           | parameter ',' parameters

   17 parameter: type ID

   18 block: '{' statements '}'

   19 global_statement: declaration_stmt ';'
   20                 | assign_stmt ';'

   21 statements: statement statements
   22           | %empty

   23 statement: declaration_stmt ';'
   24          | assign_stmt ';'
   25          | function_call_stmt ';'
   26          | condition_stmt
   27          | loop_stmt
   28          | return_stmt ';'
   29          | exit_stmt ';'
   30          | block

   31 function_call_stmt: function_id '(' opt_arguments ')'

   32 function_id: ID
   33            | PRINT_FUNCTION
   34            | INPUT_FUNCTION
   35            | MALLOC_FUNCTION
   36            | FREE_FUNCTION
   37            | POW_FUNCTION

   38 opt_arguments: arguments
   39              | %empty

   40 arguments: argument
   41          | argument ',' arguments

   42 argument: expr

   43 declaration_stmt: type ID

   44 assign_stmt: lval '=' expr

   45 condition_stmt: IF '(' expr ')' statement
   46               | IF '(' expr ')' statement ELSE statement

   47 loop_stmt: LOOP block

   48 exit_stmt: BREAK WHEN '(' expr ')'

   49 return_stmt: RETURN expr

   50 expr: '(' expr ')'
   51     | expr '*' expr
   52     | expr '/' expr
   53     | expr '%' expr
   54     | expr '+' expr
   55     | expr '-' expr
   56     | expr OR expr
   57     | expr AND expr
   58     | NOT expr
   59     | expr EQUAL expr
   60     | expr DIFF expr
   61     | expr '<' expr
   62     | expr '>' expr
   63     | expr LEQ expr
   64     | expr GEQ expr
   65     | '-' expr
   66     | simple_expr

   67 lval: ID
   68     | lval '[' expr ']'
   69     | lval '.' ID
   70     | '*' lval

   71 simple_expr: literal
   72            | lval
   73            | function_call_stmt

   74 literal: INT
   75        | FLOAT
   76        | STRING
   77        | BOOL

   78 type: primitive_type
   79     | ID
   80     | type '*'

   81 primitive_type: INT_TYPE
   82               | FLOAT_TYPE
   83               | BOOL_TYPE
   84               | VOID_TYPE
   85               | STRING_TYPE


Terminais, com as regras onde eles aparecem

    $end (0) 0
    '%' (37) 53
    '(' (40) 12 31 45 46 48 50
    ')' (41) 12 31 45 46 48 50
    '*' (42) 51 70 80
    '+' (43) 54
    ',' (44) 16 41
    '-' (45) 55 65
    '.' (46) 69
    '/' (47) 52
    ';' (59) 11 19 20 23 24 25 28 29
    '<' (60) 61
    '=' (61) 44
    '>' (62) 62
    '[' (91) 68
    ']' (93) 68
    '{' (123) 8 18
    '}' (125) 8 18
    error (256)
    ELSE (258) 46
    IF (259) 45 46
    RETURN (260) 49
    LOOP (261) 47
    BREAK (262) 48
    WHEN (263) 48
    STRUCT (264) 7
    PRINT_FUNCTION (265) 33
    INPUT_FUNCTION (266) 34
    MALLOC_FUNCTION (267) 35
    POW_FUNCTION (268) 37
    FREE_FUNCTION (269) 36
    INT_TYPE (270) 81
    FLOAT_TYPE (271) 82
    CHAR_TYPE (272)
    VOID_TYPE (273) 84
    BOOL_TYPE (274) 83
    STRING_TYPE (275) 85
    GEQ (276) 64
    LEQ (277) 63
    EQUAL (278) 59
    DIFF (279) 60
    AND (280) 57
    OR (281) 56
    NOT (282) 58
    INT (283) 74
    FLOAT (284) 75
    BOOL (285) 77
    STRING (286) 76
    ID (287) 7 11 17 32 43 67 69 79
    EOFF (288) 6
    UMINUS (289)
    LOWER_THAN_ELSE (290)
    LOWER_THAN_X (291)


Não terminais com as regras onde eles aparecem

    $accept (54)
        à esquerda: 0
    program (55)
        à esquerda: 1 2
        à direita: 0 1
    declaration (56)
        à esquerda: 3 4 5 6
        à direita: 1 2
    struct (57)
        à esquerda: 7
        à direita: 3
    struct_block (58)
        à esquerda: 8
        à direita: 7
    attributes (59)
        à esquerda: 9 10
        à direita: 8 9
    attribute (60)
        à esquerda: 11
        à direita: 9
    function (61)
        à esquerda: 12
        à direita: 4
    opt_parameters (62)
        à esquerda: 13 14
        à direita: 12
    parameters (63)
        à esquerda: 15 16
        à direita: 13 16
    parameter (64)
        à esquerda: 17
        à direita: 15 16
    block (65)
        à esquerda: 18
        à direita: 12 30 47
    global_statement (66)
        à esquerda: 19 20
        à direita: 5
    statements (67)
        à esquerda: 21 22
        à direita: 18 21
    statement (68)
        à esquerda: 23 24 25 26 27 28 29 30
        à direita: 21 45 46
    function_call_stmt (69)
        à esquerda: 31
        à direita: 25 73
    function_id (70)
        à esquerda: 32 33 34 35 36 37
        à direita: 12 31
    opt_arguments (71)
        à esquerda: 38 39
        à direita: 31
    arguments (72)
        à esquerda: 40 41
        à direita: 38 41
    argument (73)
        à esquerda: 42
        à direita: 40 41
    declaration_stmt (74)
        à esquerda: 43
        à direita: 19 23
    assign_stmt (75)
        à esquerda: 44
        à direita: 20 24
    condition_stmt (76)
        à esquerda: 45 46
        à direita: 26
    loop_stmt (77)
        à esquerda: 47
        à direita: 27
    exit_stmt (78)
        à esquerda: 48
        à direita: 29
    return_stmt (79)
        à esquerda: 49
        à direita: 28
    expr (80)
        à esquerda: 50 51 52 53 54 55 56 57 58 59 60 61 62 63 64 65 66
        à direita: 42 44 45 46 48 49 50 51 52 53 54 55 56 57 58 59 60 61 62 63 64 65 68
    lval (81)
        à esquerda: 67 68 69 70
        à direita: 44 68 69 70 72
    simple_expr (82)
        à esquerda: 71 72 73
        à direita: 66
    literal (83)
        à esquerda: 74 75 76 77
        à direita: 71
    type (84)
        à esquerda: 78 79 80
        à direita: 11 12 17 43 80
    primitive_type (85)
        à esquerda: 81 82 83 84 85
        à direita: 78


Estado 0

    0 $accept: . program $end

    STRUCT       deslocar, e ir ao estado 1
    INT_TYPE     deslocar, e ir ao estado 2
    FLOAT_TYPE   deslocar, e ir ao estado 3
    VOID_TYPE    deslocar, e ir ao estado 4
    BOOL_TYPE    deslocar, e ir ao estado 5
    STRING_TYPE  deslocar, e ir ao estado 6
    ID           deslocar, e ir ao estado 7
    EOFF         deslocar, e ir ao estado 8
    '*'          deslocar, e ir ao estado 9

    program           ir ao estado 10
    declaration       ir ao estado 11
    struct            ir ao estado 12
    function          ir ao estado 13
    global_statement  ir ao estado 14
    declaration_stmt  ir ao estado 15
    assign_stmt       ir ao estado 16
    lval              ir ao estado 17
    type              ir ao estado 18
    primitive_type    ir ao estado 19


Estado 1

    7 struct: STRUCT . ID struct_block

    ID  deslocar, e ir ao estado 20


Estado 2

   81 primitive_type: INT_TYPE .

    $padrão  reduzir usando a regra 81 (primitive_type)


Estado 3

   82 primitive_type: FLOAT_TYPE .

    $padrão  reduzir usando a regra 82 (primitive_type)


Estado 4

   84 primitive_type: VOID_TYPE .

    $padrão  reduzir usando a regra 84 (primitive_type)


Estado 5

   83 primitive_type: BOOL_TYPE .

    $padrão  reduzir usando a regra 83 (primitive_type)


Estado 6

   85 primitive_type: STRING_TYPE .

    $padrão  reduzir usando a regra 85 (primitive_type)


Estado 7

   67 lval: ID .
   79 type: ID .

    '['       reduzir usando a regra 67 (lval)
    '.'       reduzir usando a regra 67 (lval)
    '='       reduzir usando a regra 67 (lval)
    $padrão  reduzir usando a regra 79 (type)


Estado 8

    6 declaration: EOFF .

    $padrão  reduzir usando a regra 6 (declaration)


Estado 9

   70 lval: '*' . lval

    ID   deslocar, e ir ao estado 21
    '*'  deslocar, e ir ao estado 9

    lval  ir ao estado 22


Estado 10

    0 $accept: program . $end

    $end  deslocar, e ir ao estado 23


Estado 11

    1 program: declaration . program
    2        | declaration .

    STRUCT       deslocar, e ir ao estado 1
    INT_TYPE     deslocar, e ir ao estado 2
    FLOAT_TYPE   deslocar, e ir ao estado 3
    VOID_TYPE    deslocar, e ir ao estado 4
    BOOL_TYPE    deslocar, e ir ao estado 5
    STRING_TYPE  deslocar, e ir ao estado 6
    ID           deslocar, e ir ao estado 7
    EOFF         deslocar, e ir ao estado 8
    '*'          deslocar, e ir ao estado 9

    $padrão  reduzir usando a regra 2 (program)

    program           ir ao estado 24
    declaration       ir ao estado 11
    struct            ir ao estado 12
    function          ir ao estado 13
    global_statement  ir ao estado 14
    declaration_stmt  ir ao estado 15
    assign_stmt       ir ao estado 16
    lval              ir ao estado 17
    type              ir ao estado 18
    primitive_type    ir ao estado 19


Estado 12

    3 declaration: struct .

    $padrão  reduzir usando a regra 3 (declaration)


Estado 13

    4 declaration: function .

    $padrão  reduzir usando a regra 4 (declaration)


Estado 14

    5 declaration: global_statement .

    $padrão  reduzir usando a regra 5 (declaration)


Estado 15

   19 global_statement: declaration_stmt . ';'

    ';'  deslocar, e ir ao estado 25


Estado 16

   20 global_statement: assign_stmt . ';'

    ';'  deslocar, e ir ao estado 26


Estado 17

   44 assign_stmt: lval . '=' expr
   68 lval: lval . '[' expr ']'
   69     | lval . '.' ID

    '['  deslocar, e ir ao estado 27
    '.'  deslocar, e ir ao estado 28
    '='  deslocar, e ir ao estado 29


Estado 18

   12 function: type . function_id '(' opt_parameters ')' block
   43 declaration_stmt: type . ID
   80 type: type . '*'

    PRINT_FUNCTION   deslocar, e ir ao estado 30
    INPUT_FUNCTION   deslocar, e ir ao estado 31
    MALLOC_FUNCTION  deslocar, e ir ao estado 32
    POW_FUNCTION     deslocar, e ir ao estado 33
    FREE_FUNCTION    deslocar, e ir ao estado 34
    ID               deslocar, e ir ao estado 35
    '*'              deslocar, e ir ao estado 36

    function_id  ir ao estado 37


Estado 19

   78 type: primitive_type .

    $padrão  reduzir usando a regra 78 (type)


Estado 20

    7 struct: STRUCT ID . struct_block

    '{'  deslocar, e ir ao estado 38

    struct_block  ir ao estado 39


Estado 21

   67 lval: ID .

    $padrão  reduzir usando a regra 67 (lval)


Estado 22

   68 lval: lval . '[' expr ']'
   69     | lval . '.' ID
   70     | '*' lval .

    '['  deslocar, e ir ao estado 27
    '.'  deslocar, e ir ao estado 28

    $padrão  reduzir usando a regra 70 (lval)


Estado 23

    0 $accept: program $end .

    $padrão  aceitar


Estado 24

    1 program: declaration program .

    $padrão  reduzir usando a regra 1 (program)


Estado 25

   19 global_statement: declaration_stmt ';' .

    $padrão  reduzir usando a regra 19 (global_statement)


Estado 26

   20 global_statement: assign_stmt ';' .

    $padrão  reduzir usando a regra 20 (global_statement)


Estado 27

   68 lval: lval '[' . expr ']'

    PRINT_FUNCTION   deslocar, e ir ao estado 30
    INPUT_FUNCTION   deslocar, e ir ao estado 31
    MALLOC_FUNCTION  deslocar, e ir ao estado 32
    POW_FUNCTION     deslocar, e ir ao estado 33
    FREE_FUNCTION    deslocar, e ir ao estado 34
    NOT              deslocar, e ir ao estado 40
    INT              deslocar, e ir ao estado 41
    FLOAT            deslocar, e ir ao estado 42
    BOOL             deslocar, e ir ao estado 43
    STRING           deslocar, e ir ao estado 44
    ID               deslocar, e ir ao estado 45
    '-'              deslocar, e ir ao estado 46
    '*'              deslocar, e ir ao estado 9
    '('              deslocar, e ir ao estado 47

    function_call_stmt  ir ao estado 48
    function_id         ir ao estado 49
    expr                ir ao estado 50
    lval                ir ao estado 51
    simple_expr         ir ao estado 52
    literal             ir ao estado 53


Estado 28

   69 lval: lval '.' . ID

    ID  deslocar, e ir ao estado 54


Estado 29

   44 assign_stmt: lval '=' . expr

    PRINT_FUNCTION   deslocar, e ir ao estado 30
    INPUT_FUNCTION   deslocar, e ir ao estado 31
    MALLOC_FUNCTION  deslocar, e ir ao estado 32
    POW_FUNCTION     deslocar, e ir ao estado 33
    FREE_FUNCTION    deslocar, e ir ao estado 34
    NOT              deslocar, e ir ao estado 40
    INT              deslocar, e ir ao estado 41
    FLOAT            deslocar, e ir ao estado 42
    BOOL             deslocar, e ir ao estado 43
    STRING           deslocar, e ir ao estado 44
    ID               deslocar, e ir ao estado 45
    '-'              deslocar, e ir ao estado 46
    '*'              deslocar, e ir ao estado 9
    '('              deslocar, e ir ao estado 47

    function_call_stmt  ir ao estado 48
    function_id         ir ao estado 49
    expr                ir ao estado 55
    lval                ir ao estado 51
    simple_expr         ir ao estado 52
    literal             ir ao estado 53


Estado 30

   33 function_id: PRINT_FUNCTION .

    $padrão  reduzir usando a regra 33 (function_id)


Estado 31

   34 function_id: INPUT_FUNCTION .

    $padrão  reduzir usando a regra 34 (function_id)


Estado 32

   35 function_id: MALLOC_FUNCTION .

    $padrão  reduzir usando a regra 35 (function_id)


Estado 33

   37 function_id: POW_FUNCTION .

    $padrão  reduzir usando a regra 37 (function_id)


Estado 34

   36 function_id: FREE_FUNCTION .

    $padrão  reduzir usando a regra 36 (function_id)


Estado 35

   32 function_id: ID .
   43 declaration_stmt: type ID .

    ';'       reduzir usando a regra 43 (declaration_stmt)
    $padrão  reduzir usando a regra 32 (function_id)


Estado 36

   80 type: type '*' .

    $padrão  reduzir usando a regra 80 (type)


Estado 37

   12 function: type function_id . '(' opt_parameters ')' block

    '('  deslocar, e ir ao estado 56


Estado 38

    8 struct_block: '{' . attributes '}'

    INT_TYPE     deslocar, e ir ao estado 2
    FLOAT_TYPE   deslocar, e ir ao estado 3
    VOID_TYPE    deslocar, e ir ao estado 4
    BOOL_TYPE    deslocar, e ir ao estado 5
    STRING_TYPE  deslocar, e ir ao estado 6
    ID           deslocar, e ir ao estado 57

    $padrão  reduzir usando a regra 10 (attributes)

    attributes      ir ao estado 58
    attribute       ir ao estado 59
    type            ir ao estado 60
    primitive_type  ir ao estado 19


Estado 39

    7 struct: STRUCT ID struct_block .

    $padrão  reduzir usando a regra 7 (struct)


Estado 40

   58 expr: NOT . expr

    PRINT_FUNCTION   deslocar, e ir ao estado 30
    INPUT_FUNCTION   deslocar, e ir ao estado 31
    MALLOC_FUNCTION  deslocar, e ir ao estado 32
    POW_FUNCTION     deslocar, e ir ao estado 33
    FREE_FUNCTION    deslocar, e ir ao estado 34
    NOT              deslocar, e ir ao estado 40
    INT              deslocar, e ir ao estado 41
    FLOAT            deslocar, e ir ao estado 42
    BOOL             deslocar, e ir ao estado 43
    STRING           deslocar, e ir ao estado 44
    ID               deslocar, e ir ao estado 45
    '-'              deslocar, e ir ao estado 46
    '*'              deslocar, e ir ao estado 9
    '('              deslocar, e ir ao estado 47

    function_call_stmt  ir ao estado 48
    function_id         ir ao estado 49
    expr                ir ao estado 61
    lval                ir ao estado 51
    simple_expr         ir ao estado 52
    literal             ir ao estado 53


Estado 41

   74 literal: INT .

    $padrão  reduzir usando a regra 74 (literal)


Estado 42

   75 literal: FLOAT .

    $padrão  reduzir usando a regra 75 (literal)


Estado 43

   77 literal: BOOL .

    $padrão  reduzir usando a regra 77 (literal)


Estado 44

   76 literal: STRING .

    $padrão  reduzir usando a regra 76 (literal)


Estado 45

   32 function_id: ID .
   67 lval: ID .

    '('       reduzir usando a regra 32 (function_id)
    $padrão  reduzir usando a regra 67 (lval)


Estado 46

   65 expr: '-' . expr

    PRINT_FUNCTION   deslocar, e ir ao estado 30
    INPUT_FUNCTION   deslocar, e ir ao estado 31
    MALLOC_FUNCTION  deslocar, e ir ao estado 32
    POW_FUNCTION     deslocar, e ir ao estado 33
    FREE_FUNCTION    deslocar, e ir ao estado 34
    NOT              deslocar, e ir ao estado 40
    INT              deslocar, e ir ao estado 41
    FLOAT            deslocar, e ir ao estado 42
    BOOL             deslocar, e ir ao estado 43
    STRING           deslocar, e ir ao estado 44
    ID               deslocar, e ir ao estado 45
    '-'              deslocar, e ir ao estado 46
    '*'              deslocar, e ir ao estado 9
    '('              deslocar, e ir ao estado 47

    function_call_stmt  ir ao estado 48
    function_id         ir ao estado 49
    expr                ir ao estado 62
    lval                ir ao estado 51
    simple_expr         ir ao estado 52
    literal             ir ao estado 53


Estado 47

   50 expr: '(' . expr ')'

    PRINT_FUNCTION   deslocar, e ir ao estado 30
    INPUT_FUNCTION   deslocar, e ir ao estado 31
    MALLOC_FUNCTION  deslocar, e ir ao estado 32
    POW_FUNCTION     deslocar, e ir ao estado 33
    FREE_FUNCTION    deslocar, e ir ao estado 34
    NOT              deslocar, e ir ao estado 40
    INT              deslocar, e ir ao estado 41
    FLOAT            deslocar, e ir ao estado 42
    BOOL             deslocar, e ir ao estado 43
    STRING           deslocar, e ir ao estado 44
    ID               deslocar, e ir ao estado 45
    '-'              deslocar, e ir ao estado 46
    '*'              deslocar, e ir ao estado 9
    '('              deslocar, e ir ao estado 47

    function_call_stmt  ir ao estado 48
    function_id         ir ao estado 49
    expr                ir ao estado 63
    lval                ir ao estado 51
    simple_expr         ir ao estado 52
    literal             ir ao estado 53


Estado 48

   73 simple_expr: function_call_stmt .

    $padrão  reduzir usando a regra 73 (simple_expr)


Estado 49

   31 function_call_stmt: function_id . '(' opt_arguments ')'

    '('  deslocar, e ir ao estado 64


Estado 50

   51 expr: expr . '*' expr
   52     | expr . '/' expr
   53     | expr . '%' expr
   54     | expr . '+' expr
   55     | expr . '-' expr
   56     | expr . OR expr
   57     | expr . AND expr
   59     | expr . EQUAL expr
   60     | expr . DIFF expr
   61     | expr . '<' expr
   62     | expr . '>' expr
   63     | expr . LEQ expr
   64     | expr . GEQ expr
   68 lval: lval '[' expr . ']'

    GEQ    deslocar, e ir ao estado 65
    LEQ    deslocar, e ir ao estado 66
    EQUAL  deslocar, e ir ao estado 67
    DIFF   deslocar, e ir ao estado 68
    AND    deslocar, e ir ao estado 69
    OR     deslocar, e ir ao estado 70
    '<'    deslocar, e ir ao estado 71
    '>'    deslocar, e ir ao estado 72
    '+'    deslocar, e ir ao estado 73
    '-'    deslocar, e ir ao estado 74
    '*'    deslocar, e ir ao estado 75
    '/'    deslocar, e ir ao estado 76
    '%'    deslocar, e ir ao estado 77
    ']'    deslocar, e ir ao estado 78


Estado 51

   68 lval: lval . '[' expr ']'
   69     | lval . '.' ID
   72 simple_expr: lval .

    '['  deslocar, e ir ao estado 27
    '.'  deslocar, e ir ao estado 28

    $padrão  reduzir usando a regra 72 (simple_expr)


Estado 52

   66 expr: simple_expr .

    $padrão  reduzir usando a regra 66 (expr)


Estado 53

   71 simple_expr: literal .

    $padrão  reduzir usando a regra 71 (simple_expr)


Estado 54

   69 lval: lval '.' ID .

    $padrão  reduzir usando a regra 69 (lval)


Estado 55

   44 assign_stmt: lval '=' expr .
   51 expr: expr . '*' expr
   52     | expr . '/' expr
   53     | expr . '%' expr
   54     | expr . '+' expr
   55     | expr . '-' expr
   56     | expr . OR expr
   57     | expr . AND expr
   59     | expr . EQUAL expr
   60     | expr . DIFF expr
   61     | expr . '<' expr
   62     | expr . '>' expr
   63     | expr . LEQ expr
   64     | expr . GEQ expr

    GEQ    deslocar, e ir ao estado 65
    LEQ    deslocar, e ir ao estado 66
    EQUAL  deslocar, e ir ao estado 67
    DIFF   deslocar, e ir ao estado 68
    AND    deslocar, e ir ao estado 69
    OR     deslocar, e ir ao estado 70
    '<'    deslocar, e ir ao estado 71
    '>'    deslocar, e ir ao estado 72
    '+'    deslocar, e ir ao estado 73
    '-'    deslocar, e ir ao estado 74
    '*'    deslocar, e ir ao estado 75
    '/'    deslocar, e ir ao estado 76
    '%'    deslocar, e ir ao estado 77

    $padrão  reduzir usando a regra 44 (assign_stmt)


Estado 56

   12 function: type function_id '(' . opt_parameters ')' block

    INT_TYPE     deslocar, e ir ao estado 2
    FLOAT_TYPE   deslocar, e ir ao estado 3
    VOID_TYPE    deslocar, e ir ao estado 4
    BOOL_TYPE    deslocar, e ir ao estado 5
    STRING_TYPE  deslocar, e ir ao estado 6
    ID           deslocar, e ir ao estado 57

    $padrão  reduzir usando a regra 14 (opt_parameters)

    opt_parameters  ir ao estado 79
    parameters      ir ao estado 80
    parameter       ir ao estado 81
    type            ir ao estado 82
    primitive_type  ir ao estado 19


Estado 57

   79 type: ID .

    $padrão  reduzir usando a regra 79 (type)


Estado 58

    8 struct_block: '{' attributes . '}'

    '}'  deslocar, e ir ao estado 83


Estado 59

    9 attributes: attribute . attributes

    INT_TYPE     deslocar, e ir ao estado 2
    FLOAT_TYPE   deslocar, e ir ao estado 3
    VOID_TYPE    deslocar, e ir ao estado 4
    BOOL_TYPE    deslocar, e ir ao estado 5
    STRING_TYPE  deslocar, e ir ao estado 6
    ID           deslocar, e ir ao estado 57

    $padrão  reduzir usando a regra 10 (attributes)

    attributes      ir ao estado 84
    attribute       ir ao estado 59
    type            ir ao estado 60
    primitive_type  ir ao estado 19


Estado 60

   11 attribute: type . ID ';'
   80 type: type . '*'

    ID   deslocar, e ir ao estado 85
    '*'  deslocar, e ir ao estado 36


Estado 61

   51 expr: expr . '*' expr
   52     | expr . '/' expr
   53     | expr . '%' expr
   54     | expr . '+' expr
   55     | expr . '-' expr
   56     | expr . OR expr
   57     | expr . AND expr
   58     | NOT expr .
   59     | expr . EQUAL expr
   60     | expr . DIFF expr
   61     | expr . '<' expr
   62     | expr . '>' expr
   63     | expr . LEQ expr
   64     | expr . GEQ expr

    GEQ    deslocar, e ir ao estado 65
    LEQ    deslocar, e ir ao estado 66
    EQUAL  deslocar, e ir ao estado 67
    DIFF   deslocar, e ir ao estado 68
    '<'    deslocar, e ir ao estado 71
    '>'    deslocar, e ir ao estado 72
    '+'    deslocar, e ir ao estado 73
    '-'    deslocar, e ir ao estado 74
    '*'    deslocar, e ir ao estado 75
    '/'    deslocar, e ir ao estado 76
    '%'    deslocar, e ir ao estado 77

    $padrão  reduzir usando a regra 58 (expr)


Estado 62

   51 expr: expr . '*' expr
   52     | expr . '/' expr
   53     | expr . '%' expr
   54     | expr . '+' expr
   55     | expr . '-' expr
   56     | expr . OR expr
   57     | expr . AND expr
   59     | expr . EQUAL expr
   60     | expr . DIFF expr
   61     | expr . '<' expr
   62     | expr . '>' expr
   63     | expr . LEQ expr
   64     | expr . GEQ expr
   65     | '-' expr .

    $padrão  reduzir usando a regra 65 (expr)


Estado 63

   50 expr: '(' expr . ')'
   51     | expr . '*' expr
   52     | expr . '/' expr
   53     | expr . '%' expr
   54     | expr . '+' expr
   55     | expr . '-' expr
   56     | expr . OR expr
   57     | expr . AND expr
   59     | expr . EQUAL expr
   60     | expr . DIFF expr
   61     | expr . '<' expr
   62     | expr . '>' expr
   63     | expr . LEQ expr
   64     | expr . GEQ expr

    GEQ    deslocar, e ir ao estado 65
    LEQ    deslocar, e ir ao estado 66
    EQUAL  deslocar, e ir ao estado 67
    DIFF   deslocar, e ir ao estado 68
    AND    deslocar, e ir ao estado 69
    OR     deslocar, e ir ao estado 70
    '<'    deslocar, e ir ao estado 71
    '>'    deslocar, e ir ao estado 72
    '+'    deslocar, e ir ao estado 73
    '-'    deslocar, e ir ao estado 74
    '*'    deslocar, e ir ao estado 75
    '/'    deslocar, e ir ao estado 76
    '%'    deslocar, e ir ao estado 77
    ')'    deslocar, e ir ao estado 86


Estado 64

   31 function_call_stmt: function_id '(' . opt_arguments ')'

    PRINT_FUNCTION   deslocar, e ir ao estado 30
    INPUT_FUNCTION   deslocar, e ir ao estado 31
    MALLOC_FUNCTION  deslocar, e ir ao estado 32
    POW_FUNCTION     deslocar, e ir ao estado 33
    FREE_FUNCTION    deslocar, e ir ao estado 34
    NOT              deslocar, e ir ao estado 40
    INT              deslocar, e ir ao estado 41
    FLOAT            deslocar, e ir ao estado 42
    BOOL             deslocar, e ir ao estado 43
    STRING           deslocar, e ir ao estado 44
    ID               deslocar, e ir ao estado 45
    '-'              deslocar, e ir ao estado 46
    '*'              deslocar, e ir ao estado 9
    '('              deslocar, e ir ao estado 47

    $padrão  reduzir usando a regra 39 (opt_arguments)

    function_call_stmt  ir ao estado 48
    function_id         ir ao estado 49
    opt_arguments       ir ao estado 87
    arguments           ir ao estado 88
    argument            ir ao estado 89
    expr                ir ao estado 90
    lval                ir ao estado 51
    simple_expr         ir ao estado 52
    literal             ir ao estado 53


Estado 65

   64 expr: expr GEQ . expr

    PRINT_FUNCTION   deslocar, e ir ao estado 30
    INPUT_FUNCTION   deslocar, e ir ao estado 31
    MALLOC_FUNCTION  deslocar, e ir ao estado 32
    POW_FUNCTION     deslocar, e ir ao estado 33
    FREE_FUNCTION    deslocar, e ir ao estado 34
    NOT              deslocar, e ir ao estado 40
    INT              deslocar, e ir ao estado 41
    FLOAT            deslocar, e ir ao estado 42
    BOOL             deslocar, e ir ao estado 43
    STRING           deslocar, e ir ao estado 44
    ID               deslocar, e ir ao estado 45
    '-'              deslocar, e ir ao estado 46
    '*'              deslocar, e ir ao estado 9
    '('              deslocar, e ir ao estado 47

    function_call_stmt  ir ao estado 48
    function_id         ir ao estado 49
    expr                ir ao estado 91
    lval                ir ao estado 51
    simple_expr         ir ao estado 52
    literal             ir ao estado 53


Estado 66

   63 expr: expr LEQ . expr

    PRINT_FUNCTION   deslocar, e ir ao estado 30
    INPUT_FUNCTION   deslocar, e ir ao estado 31
    MALLOC_FUNCTION  deslocar, e ir ao estado 32
    POW_FUNCTION     deslocar, e ir ao estado 33
    FREE_FUNCTION    deslocar, e ir ao estado 34
    NOT              deslocar, e ir ao estado 40
    INT              deslocar, e ir ao estado 41
    FLOAT            deslocar, e ir ao estado 42
    BOOL             deslocar, e ir ao estado 43
    STRING           deslocar, e ir ao estado 44
    ID               deslocar, e ir ao estado 45
    '-'              deslocar, e ir ao estado 46
    '*'              deslocar, e ir ao estado 9
    '('              deslocar, e ir ao estado 47

    function_call_stmt  ir ao estado 48
    function_id         ir ao estado 49
    expr                ir ao estado 92
    lval                ir ao estado 51
    simple_expr         ir ao estado 52
    literal             ir ao estado 53


Estado 67

   59 expr: expr EQUAL . expr
